src/styles.scss
/* You can add global styles to this file, and also import other style files */
@import "~@angular/material/theming";
// Plus imports for other components in your app.

// Include the common styles for Angular Material. We include this here so that you only
// have to load a single css file for Angular Material in your app.
// Be sure that you only ever include this mixin once!
@include mat-core();

$my-theme-primary: mat-palette($mat-blue);
$my-theme-accent: mat-palette($mat-grey, 900);

$my-theme: mat-light-theme($my-theme-primary, $my-theme-accent);

@include angular-material-theme($my-theme);
$yellow1: #aeea00;
$yellow: #d2ff00;
@font-face {
  font-family: "Gothic";
  src: url("src/assets/fonts/Gothic/ITC Avant Garde Gothic LT Book Regular.otf");
}

@font-face {
  font-family: "Gothic Bold";
  src: url("src/assets/fonts/Gothic/ITC Avant Garde Gothic Bold.otf");
}

@font-face {
  font-family: "Comfortaa";
  src: url("src/assets/fonts/Comfortaa/static/Comfortaa-Medium.ttf");
}

@font-face {
  font-family: "Comfortaa Bold";
  src: url("src/assets/fonts/Comfortaa/static/Comfortaa-Bold.ttf");
}

@font-face {
  font-family: "Sen Bold";
  src: url("src/assets/fonts/Sen/Sen-Bold.ttf");
}

html,
body {
  margin: 0;
  padding: 0;
  height: 100%;
  overflow-x: hidden;
}
body {
  margin: 0;
  font-family: "Gothic", "Helvetica Neue", sans-serif;
}

mat-radio-button {
  margin-right: 10px;
}

.info-text {
  color: rgb(180, 180, 180);
}

.info-icon {
  filter: invert(0.7);
  width: 100%;
}

.info {
  background-image: url(assets/images/information.svg);
  z-index: 1500;
  width: 15px;
  height: 15px;
  margin: 0.5em;
  // position: relative;
}

.info::before {
  content: attr(data-tooltip);
  pointer-events: none;
  position: absolute;
  color: white;
  opacity: 0%;
  left: 50%;
  //left: calc();
  background: none;
  text-align: center;
  padding: 0.5em;
  border-radius: 0.5em;
  width: max-content;
  max-width: 50vw;
  transform: translateX(-50%) scale(0.5);
}

.info:hover::before {
  opacity: 80%;
  transform: translateX(-50%) translateY(30%) scale(1);

  //right: calc(30%);
  background: rgb(78, 78, 78);
  transition: all 0.1s;
}

.navbar {
  background-color: #d2ff00;
  text-decoration: none;
  box-shadow: rgba(0, 0, 0, 0.205) 2px 2px 2px;
  height: 5em;
}

.sticky-top {
  z-index: 50;
}
.navbar-brand {
  font-family: "Gothic Bold";
  font-size: 1em;
  color: black;

  &:hover {
    color: black;
  }
}

.navbar {
  .nav-link {
    font-size: 0.8em;
    padding: 0.7em;
    background-color: black;
    color: $yellow;

    &:hover {
      color: $yellow;
      text-decoration: underline;
    }
  }
}

@media (max-width: 767.98px) {
  .navbar {
    height: 3.5em;
  }
}
.mat-radio-button.mat-accent.mat-radio-checked .mat-radio-outer-circle {
  border-color: black;
  background-color: $yellow;
  color: black;
}

.mat-checkbox.mat-accent {
  // &.mat-checkbox-checked .mat-checkbox-background {
  //   border: 2px solid black;
  //   border-radius: 3px;
  // }

  
}
.mat-checkbox-checkmark-path {
    stroke: $yellow !important;
    width: 2px;
  }
.title {
  height: 50vh;
}

.special {
  font-family: "Gothic", Arial, sans-serif;
  color: black;
}

.subtitle {
  font-family: "Gothic", Arial, sans-serif;
  color: black;
  padding-left: 0em;
  padding-top: 1em;
}

.brand {
  font-family: "Gothic Bold", Arial, sans-serif;
  font-size: 5em;
}

.brand:hover {
  color: black;
}

.yellow {
  background-color: $yellow;
}

.white {
  background-color: white;
}

.calc-button {
  width: 100%;
  height: 4em;
  padding-left: 2em;
  font-family: "Gothic Bold";
  text-align: left;
  border: none;
  background-color: lighten($yellow, 20);
  box-shadow: rgba(77, 77, 77, 0.65) 0px 2px 3px;

  &:hover {
    background-color: $yellow;
  }

  &::after {
    content: "▼";
    margin-left: 1em;
    color: rgb(49, 49, 49);
    font-size: 1em;
  }
}

.form {
  font-family: "Gothic", Arial, Helvetica, sans-serif;
  background-color: white;

  .btn {
    font-family: "Gothic Bold", Arial, Helvetica, sans-serif;
  }

  .form-control {
    option {
      background-color: $yellow;

      :hover {
        background: darken($yellow, 20);
        color: black;
      }
    }
  }
}

.special.heading {
  font-family: "Gothic Bold", Arial, Helvetica, sans-serif;
}

.front-page {
  width: 100vw;
  background-color: #d2ff00;
  background-position: left;
  background-size: cover;
  padding-top: 0%;
}

section {
  padding: 3em 0;
}

.section-icon {
  font-size: 5em;
  text-align: right;
}

.larger {
  font-size: 3em;
}

.liner {
  font-size: 1.8em;
}

.border-thick {
  border: 0.3em solid black;
  border-radius: 1em;
  overflow: hidden;
  box-shadow: rgba(77, 77, 77, 0.65) 0px 0px 8px;
}

.btn-outline-dark {
  box-shadow: rgba(77, 77, 77, 0.65) 0px 2px 3px;

  &:hover {
    color: black;
    background-color: rgba($yellow, 0.8);
  }
}

.info-panels img {
  max-width: 60px;
  width: 50%;
  margin: 0 auto;
}
.img-staff {
  text-align: center;
}
.img-staff img {
  width: 40vw;
  height: 40vw;
  border-radius: 25vw;
  object-fit: cover;
}

.demo-img {
  text-align: center;
  margin: 0;
}

.demo-img img {
  width: 100%;
  max-height: 500px;
  object-fit: cover;
}

.instructions {
  list-style: none;
  margin-top: 30px;
  counter-reset: my-awesome-counter;
  padding: 0;
  width: 80%;

  p {
    margin-bottom: 60px;
  }

  li {
    counter-increment: my-awesome-counter;
    margin-bottom: 30px;
  }
  li::before {
    content: counter(my-awesome-counter) ". ";
    font-family: "Gothic Bold";
  }
}

.quartiers {
  font-family: "Gothic";
  margin-top: 30px;

  ul {
    list-style-type: none;
    margin-bottom: 40px;
  }

  p {
    font-family: "Gothic Bold";
    font-size: 1.3em;
  }
}

.vertical-center {
  min-height: 100vh;
  display: flex;
  align-items: center;
}

ul {
  list-style-type: none;
}

.details {
  margin-top: 0.5em;
  ul {
    padding: 0;
    margin: 0;
  }
}
.items-flex-list {
  display: flex;
  flex-wrap: wrap;
  //flex-direction: column;

  > * {
    flex: 100%;
  }
}

a.footer-link {
  text-decoration: none;
  color: black;
  font-size: smaller;
}

.content-section {
  width: 75%;
  margin: auto;
}

.svg-icon {
  &.large {
    width: 2em;
  }
  &.medium {
    width: 5em;
    margin: 2em;
  }
  &.small {
    margin: 0.7em;
    float: left;
    width: 1.5em;
  }
}

@media (min-width: 768px) {
  .img-staff img {
    width: 20vw;
    height: 20vw;
    border-radius: 10vw;
    object-fit: cover;
  }

  .items-flex-list {
    display: flex;
    flex-wrap: wrap;
    //flex-direction: column;

    > * {
      flex: 50%;
    }
  }
}

// small screens
@media (max-width: 768px) {
  .brand {
    font-size: 3em;
  }
  .section-icon {
    font-size: 3em;
  }

  .special.heading {
    font-size: 4vw;
  }

  .content-section {
    width: 100%;
  }
}

